--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,18 @@ jobs:
       - name: Clone
         id: checkout
         uses: actions/checkout@v4
+        with:
+          submodules: true
 
       - name: Dependencies
         id: depends
         run: |
           sudo apt-get update
-          sudo apt-get install make
+          sudo apt-get install make patch
+
+      - name: Apply whisper.cpp patches
+        run: |
+          bash whisper.cpp.patches/apply-patches.sh
 
       - name: Cache cosmocc toolchain
         id: cache-cosmocc-toolchain
